update host swag file
